fix profile picture sisplay problem

--- a/index.css
+++ b/index.css
@@ -13,8 +13,8 @@
 }
 
 .picture{
-	width: 100%;
-	height: 100%;
+	width: 150px;
+	height:150px;
 }
 
  a {
@@ -108,7 +108,7 @@
 }
  .profile .picture-resume img {
 	 border-radius: 50%;
-	 width: 130px;
+	 width: 150px;
 }
  @media (max-width: 1500px) {
 	 .profile .picture-resume img {
